--- a/index.css
+++ b/index.css
@@ -41,6 +41,8 @@ body {
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  background-color: var(--clr-s-100);
+  position: relative;
   display: flex;
   flex-direction: column;
 }
@@ -67,4 +69,30 @@ h4,
 h5,
 h6 {
   overflow-wrap: break-word;
+}
+
+.purple-blob {
+  height: 40rem;
+  width: 30rem;
+  background-color: var(--clr-s-200);
+  position: absolute;
+  right: -2.5rem;
+  bottom: 0;
+  border-top-left-radius: 15rem;
+  border-top-right-radius: 15rem;
+}
+
+.light-grey-blob {
+  height: 40rem;
+  width: 30rem;
+  background: linear-gradient(
+    to top,
+    var(--clr-p-gradient-600),
+    var(--clr-p-text-300)
+  );
+  position: absolute;
+  left: -2.5rem;
+  top: 0;
+  border-bottom-left-radius: 15rem;
+  border-bottom-right-radius: 15rem;
 }
