--- a/index.css
+++ b/index.css
@@ -47,6 +47,10 @@ body {
   -webkit-font-smoothing: antialiased;
   background-color: var(--clr-s-150);
   font-family: var(--ff-primary);
+  display: flex;
+  /* flex-direction: column;
+  align-items: center;
+  justify-content: center; */
 }
 
 img,
@@ -87,7 +91,7 @@ h6 {
   height: 90%;
   width: 30%;
   background-color: var(--clr-s-200);
-  position: absolute;
+  position: fixed;
   right: -10rem;
   bottom: 0;
   border-top-left-radius: 15rem;
@@ -149,7 +153,7 @@ h6 {
 
 .phone-white-blob {
   position: absolute;
-  top: 0;
+  top: -0.1rem;
   height: 25%;
   width: 60%;
   background-color: var(--clr-s-100);
@@ -204,7 +208,6 @@ h6 {
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
-  margin-bottom: 5rem;
 }
 
 .heading {
@@ -226,8 +229,27 @@ h6 {
     flex-direction: column;
   }
 
+  .front-items {
+    margin-top: 5rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .light-grey-blob {
+    height: 55%;
+    width: 60%;
+  }
+
+  .purple-blob {
+    height: 55%;
+    width: 60%;
+  }
+
   .paragraph {
     align-items: center;
+    margin-bottom: 2.5rem;
   }
 
   .content {
